--- a/test/index.html
+++ b/test/index.html
@@ -4,11 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>jQuery-JSONP Test Suite</title>
 	<link rel="Stylesheet" media="screen" href="qunit/qunit/qunit.css" />
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
-	<script src="../src/jquery.jsonp.js"></script>
-	<script src="qunit/qunit/qunit.js"></script>
-	<script src="./init.js"></script>
-	<script src="./unit.js"></script>
+	<script src="./include.js"></script>
 </head>
 <body id="body">
 	<h1 id="qunit-header"><a href="./index.html">jQuery-JSONP Test Suite</a></h1>
